kubernetes/common/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "gumerov-marat-06.k8s.praktikum-services.tech"
  rules:
    - host: "gumerov-marat-06.k8s.praktikum-services.tech"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8088
